Name:		LHCOAnalysis-type
Version:	1.0
Synopsis:	LHCOAnalysis-type : LHC Olympics Type 
Description: 	LHCOAnalysis-type : LHC Olympics Type 
                (output type of PGS detector simulator) 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, binary
  Exposed-Modules: 
                   HEP.Parser.LHCOAnalysis.PhysObj

		 
